Tittle and minor updates

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: Rsconctdply
 Type: Package
-Title: Deploys multiple Shiny apps using Json config file
-Version: 0.1.1
+Title: Deploys Multiple Shiny Apps using Json Config File
+Version: 0.1.2
 Author: schimata
 Maintainer: schimata <schimata@yotabitesllc.com>
 Depends:
@@ -10,7 +10,7 @@ Imports:
     rjson,
     rsconnect,
     dplyr
-Description: This package helps in mass deployemnt of shiny apps to Rstudio connect or Shiny Server. Multiple user accounts and servers can be configured for deployement.
+Description: Provides a tool for mass deployment of shiny apps to RStudio Connect or Shiny Server. Multiple user accounts and servers can be configured for deployment.
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
