--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: Rsconctdply
 Type: Package
-Title: Deploys Multiple Shiny Apps using Json Config File
-Version: 0.1.2
-Author: schimata
-Maintainer: schimata <schimata@yotabitesllc.com>
+Title: Deploys Multiple 'Shiny' Apps using Configuration File
+Version: 0.1.3
+Author: Sai Chimata
+Maintainer: Sai Chimata <schimata@yotabitesllc.com>
 Depends:
     R (>= 3.0.1)
 Imports:
     rjson,
     rsconnect,
     dplyr
-Description: Provides a tool for mass deployment of shiny apps to RStudio Connect or Shiny Server. Multiple user accounts and servers can be configured for deployment.
+Description: Provides a tool for mass deployment of shiny apps to 'RStudio Connect' or 'Shiny Server'. Multiple user accounts and servers can be configured for deployment.
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
